tests/samples/block-unclosed-2/template.blate
// error: _
<ul id="navigation">
    {@each item in navigation}
        <li><a href="{ item.href }">{ item.caption }</a></li>
    {/each _}
</ul>